--- a/docroot/themes/iucn_backend/less/components/assessment/form.less
+++ b/docroot/themes/iucn_backend/less/components/assessment/form.less
@@ -176,7 +176,7 @@
     .chosen-container {
       min-width: 0;
       max-width: 100%;
-      width: 100% !important;
+      width: auto !important;
     }
 
     // // Nesting
